0.5

- Fixed bug: commenting order beyond 10 was wrong
- Added feature: name parameter to notfound snip. You can add [{$name}] to the snip to add [create name] on the page
- Fixed bug: strike through with dashes, --Test-Text-- did not render
- Developer: Refactored blog functionality to class Blog
- Developer: Refactored missing to MissingInterceptor in SnipSpace
- Developer: Added first Interceptor unit test
- Fixed bug: /raw/ had problems with UTF-8 characters
- Added feature: Aliases for links [alias|link]
- Added feature: app.perm.register=deny prevents registering

0.4.2 - 2003-03-18

- Fixed bug: fixed a major security bug
- Fixed bug: fixed shutdown behaviour to cleanly close database

0.4.1 - 2003-03-24

- Fixed bug: fixed performance bug for MacroFilter
- startup message requiring JAVA_HOME removed (unnecessary)
- removed -server command line option from startup scripts

0.4 - 2003-03-18

- Fixed bug: Added more methods to XML-RPC Blogger API
- Added feature: XML-RPC MetaWeblog API support
- Fixed bug: Some links did not detect that the snips was created (when someone changed upper/lowercase)
- fixed css bugs
- Removed URL detection that brakes absolute URLs behind a proxy
- File Upload changed to store files relative to snips
- Fixed bug: zero bytes when decoding %xx encoded urls
- Fixed bug: URLs in [...] made the LinkFilter not process any [...]
- Fixed bug: Sometimes comments were in wrong order
- Fixed bug: Some urls (search) missed a '/'
- Fixed bug: Under some circumstances SnipSnap escaped HTML
- Added feature: Added {online-time} which displays a string since when the weblog was created
- Added feature: Permalink for comments
- Added feature: Snips from persons now have a icon in the listing
- Added feature: {snip-count-by-user:stephan} macro
- Fixed bug: create link did not follow [create name] format
- Fixed bug: Correct date format in Dublin core dc:date
- Security: Fixed posting and editing by unauthorized users