@@ -66,8 +66,18 @@
   </servlet>
 
   <servlet>
+    <servlet-name>org.snipsnap.net.LabelsServlet</servlet-name>
+    <servlet-class>org.snipsnap.net.LabelsServlet</servlet-class>
+  </servlet>
+
+  <servlet>
     <servlet-name>org.snipsnap.net.AddLabelServlet</servlet-name>
     <servlet-class>org.snipsnap.net.AddLabelServlet</servlet-class>
+  </servlet>
+
+  <servlet>
+    <servlet-name>org.snipsnap.net.RemoveLabelServlet</servlet-name>
+    <servlet-class>org.snipsnap.net.RemoveLabelServlet</servlet-class>
   </servlet>
 
   <servlet>
@@ -242,8 +252,18 @@
   </servlet-mapping>
 
   <servlet-mapping>
+    <servlet-name>org.snipsnap.net.LabelsServlet</servlet-name>
+    <url-pattern>/exec/labels</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
     <servlet-name>org.snipsnap.net.AddLabelServlet</servlet-name>
     <url-pattern>/exec/addlabel</url-pattern>
+  </servlet-mapping>
+
+  <servlet-mapping>
+    <servlet-name>org.snipsnap.net.RemoveLabelServlet</servlet-name>
+    <url-pattern>/exec/removelabel</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
