@@ -17,6 +17,6 @@
 <s:check roles="Authenticated" permission="Edit" snip="${snip}" invert="true"><span class="inactive">[edit]</span></s:check>
 <s:check roles="Authenticated" permission="Edit" snip="${snip}">[<a href="../exec/upload?name=<c:out value='${snip.nameEncoded}'/>">attach</a>]</s:check>
 <s:check roles="Authenticated" permission="Edit" snip="${snip}" invert="true"><span class="inactive">[attach]</span></s:check>
-<%--<s:check roles="Authenticated">[<a href="../exec/addlabel?name=<c:out value='${snip.nameEncoded}'/>">new label</a>]</s:check>--%>
+<s:check roles="Authenticated">[<a href="../exec/labels?snipname=<c:out value='${snip.nameEncoded}'/>">labels</a>]</s:check>
 <s:check roles="Editor"><div class="permissions"><c:out value="${snip.permissions}"/></div></s:check>
 
